@@ -10,6 +10,11 @@ HOSTOS = i386-unknown-linux2.5
 TARGETCC  = "gcc -march=i386 -m32"
 TARGETCXX = "g++ -march=i386 -m32"
 
+# local includes and libraries
+TARGETCXXFLAGS = "-O2 -I$(HOME)/local-$(HOSTNAME)/include"
+TARGETCFLAGS = "-O2 -I$(HOME)/local-$(HOSTNAME)/include"
+TARGETLDFLAGS = "-L$(HOME)/local-$(HOSTNAME)/lib32"
+
 # for backward compatibility
 # FC6 uses --hash-style=gnu by default
-TRAGETLDFLAGS = -Wl,--hash-style=both
+TRAGETLDFLAGS += -Wl,--hash-style=both
