@@ -7,6 +7,11 @@ MAKEJOBFLAGS = -j 2
 TARGETOS = amd64-unknown-linux2.5
 HOSTOS = amd64-unknown-linux2.5
 
+# local includes and libraries
+TARGETCXXFLAGS = "-O2 -I$(HOME)/local-$(HOSTNAME)/include"
+TARGETCFLAGS = "-O2 -I$(HOME)/local-$(HOSTNAME)/include"
+TARGETLDFLAGS = "-L$(HOME)/local-$(HOSTNAME)/lib"
+
 # cross-tools are installed
 OTHERTARGETS = i586-mingw32msvc i386-unknown-linux2.5
 
