@@ -4,6 +4,10 @@ MAKEJOBFLAGS = -j 2
 TARGETOS = i386-unknown-netbsd
 HOSTOS = i386-unknown-netbsd
 
-# readline library at /usr/pkg/lib 
-TARGETLDFLAGS = "-L/usr/pkg/lib"
+# local includes and libraries
 TARGETCXXFLAGS = "-O2 -I$(HOME)/local-$(HOSTNAME)/include"
+TARGETCFLAGS = "-O2 -I$(HOME)/local-$(HOSTNAME)/include"
+TARGETLDFLAGS = "-L$(HOME)/local-$(HOSTNAME)/lib"
+
+# readline library at /usr/pkg/lib 
+TARGETLDFLAGS += "-L/usr/pkg/lib"
